🚀 Complete single-service Railway deployment setup
✅ Major Changes:
- Consolidated PDF extraction from Python to Node.js
- Created combined server serving both frontend and API
- Added Instagram Reels thumbnail support with fallback system
- Updated address to DHA Lahore location
- Fixed video text visibility on dark backgrounds

✅ New Features:
- Node.js PDF extraction API with pdf-parse
- Instagram thumbnail fetching with oEmbed API
- Video placeholder system for unsupported platforms
- Enhanced video support in content tiles
- Responsive design improvements

✅ Deployment Ready:
- Single-service Railway configuration
- ES module compatibility fixes
- Production build optimization
- Health check endpoints
- Clean deployment scripts

✅ UI/UX Improvements:
- Updated contact information
- Fixed navbar text wrapping
- Replaced 'Awareness Campaigns' with 'Workshops & Training'
- Removed phone numbers
- Enhanced video display with Instagram-like previews

✅ Removed Dependencies:
- Python Flask server
- Python PDF extraction libraries
- Dual-service complexity
- requirements.txt and Python scripts

Ready for one-click Railway deployment! 🎉

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+# PDF-parse workaround directory
+test/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
