--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "npm run build && tsx src/api/combined-server.ts",
-    "start:prod": "npm run build && tsx src/api/combined-server.ts",
+    "start": "npm run build && node --loader tsx/esm src/api/combined-server.ts",
+    "start:prod": "npm run build && node --loader tsx/esm src/api/combined-server.ts",
     "api": "tsx src/api/server.ts",
     "api:dev": "tsx watch src/api/server.ts",
-    "server": "npm run build && tsx src/api/combined-server.ts",
+    "server": "npm run build && node --loader tsx/esm src/api/combined-server.ts",
     "server:dev": "tsx watch src/api/combined-server.ts"
   },
   "dependencies": {
