--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "npm run build && node --loader tsx/esm src/api/combined-server.ts",
-    "start:prod": "npm run build && node --loader tsx/esm src/api/combined-server.ts",
+    "start:prod": "npm run build && npx tsx src/api/combined-server.ts",
     "api": "tsx src/api/server.ts",
     "api:dev": "tsx watch src/api/server.ts",
     "server": "npm run build && node --loader tsx/esm src/api/combined-server.ts",
